corrected horizontal scroll

--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -6,5 +6,5 @@
     -ms-text-size-adjust: 100%;
     -moz-text-size-adjust: 100%;
     text-rendering: optimizeLegibility;
-    overflow: hidden;
+    overflow-x: hidden;
 }
